--- a/eQueue/eQueue-war/web/index.xhtml
+++ b/eQueue/eQueue-war/web/index.xhtml
@@ -6,7 +6,10 @@
         <title>eQueue</title>
     </h:head>
     <h:body>
-        <h1>Welcome to eQueue<h1>
+        <h1>Welcome to eQueue</h1>
+        
+        Hello i love IS3106.
+        
     </h:body>
 </html>
 
