Added Creation of Customer

--- a/eQueue/eQueue-war/web/viewStoreVariables.xhtml
+++ b/eQueue/eQueue-war/web/viewStoreVariables.xhtml
@@ -5,6 +5,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Store management</title>
+        <h:outputStylesheet library="css" name="default.css" />
     </h:head>
     <h:body>
         <h2>Store Management</h2>
