--- a/eQueue/eQueue-war/web/updateVariables.xhtml
+++ b/eQueue/eQueue-war/web/updateVariables.xhtml
@@ -4,7 +4,8 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Update Store Variables</title>
+        <title>Update Store Variables</title>        
+        <h:outputStylesheet library="css" name="default.css" />
     </h:head>
     <h:body>
 
