Complete Basic CRUD for Employees, excluding Filter for AccessRight and Login Check

--- a/eQueue/eQueue-war/web/createNewEmployee.xhtml
+++ b/eQueue/eQueue-war/web/createNewEmployee.xhtml
@@ -50,8 +50,8 @@
             </h:panelGrid>
 
             <br/>
-            <div style="text-align: center;">
-                <h:button outcome="index.xhtml" value="Go Back" />&nbsp;
+            <div style="text-align: left;">
+                <h:button outcome="index.xhtml" value="Back" />&nbsp;
                 <h:commandButton value="Clear" type="reset" />&nbsp;
                 <h:commandButton value="Create" type="submit" actionListener="#{createNewEmployeeManagedBean.createNewEmployee}" />
             </div>
