--- a/eQueue/eQueue-war/web/index.xhtml
+++ b/eQueue/eQueue-war/web/index.xhtml
@@ -48,7 +48,7 @@
         <h:panelGroup rendered="#{sessionScope.employeeIsLogin == true}">
             <ul>
                 <li><h:link outcome="/createNewEmployee.xhtml">Create New Employee</h:link></li>
-                <li></li>
+                <li><h:link outcome="/viewAllEmployees.xhtml">View All Employees</h:link></li>
             </ul>
         </h:panelGroup>
 
