Modified method name

--- a/eQueue/eQueue-war/web/deleteEmployee.xhtml
+++ b/eQueue/eQueue-war/web/deleteEmployee.xhtml
@@ -38,7 +38,7 @@
                 
                 <div style="text-align: left;">                       
                     <h:commandButton value="Back" actionListener="#{deleteEmployeeManagedBean.back}" />&nbsp;
-                    <h:commandButton value="Delete" type="submit" actionListener="#{deleteEmployeeManagedBean.deleteProduct}" rendered="#{deleteEmployeeManagedBean.employeeToDelete != null}" />
+                    <h:commandButton value="Delete" type="submit" actionListener="#{deleteEmployeeManagedBean.deleteEmployee}" rendered="#{deleteEmployeeManagedBean.employeeToDelete != null}" />
                 </div>
             </h:form>
         </section>
