Added Menu Item & Category Session Beans, Managed Beans and JSF. WIP: RUD categories, only create is working for categories

--- a/eQueue/eQueue-war/web/index.xhtml
+++ b/eQueue/eQueue-war/web/index.xhtml
@@ -49,7 +49,9 @@
                 <li><h:link outcome="/createNewEmployee.xhtml">Create New Employee</h:link></li>
                 <li><h:link outcome="/viewAllEmployees.xhtml">View All Employees</h:link></li>
                 <li><h:link value="Store Management" outcome="viewStoreVariables" /></li>
-
+                <li><h:link outcome="/createNewMenuCategory.xhtml">Create New Menu Category</h:link></li>
+                <li><h:link outcome="/createNewMenuItem.xhtml">Create New Menu Item</h:link></li>
+                <li><h:link outcome="/viewAllMenuItems.xhtml">View All Menu Items</h:link></li>
             </ul>
         </h:panelGroup>
 
