Added Join Queue

--- a/eQueue/eQueue-war/web/index.xhtml
+++ b/eQueue/eQueue-war/web/index.xhtml
@@ -110,8 +110,8 @@
                 <li><h:link outcome="/createNewMenuCategory.xhtml">Create New Menu Category</h:link></li>
                 <li><h:link outcome="/createNewMenuItem.xhtml">Create New Menu Item</h:link></li>
                 <li><h:link outcome="/viewAllMenuItems.xhtml">View All Menu Items</h:link></li>
-                <li><h:link outcome="/createDiningTable.xhtml"> create dining table</h:link></li>
-                <li><h:link outcome="/viewAllDiningTables.xhtml"> view all dining table</h:link></li>
+                <li><h:link outcome="/createDiningTable.xhtml">Create dining table</h:link></li>
+                <li><h:link outcome="/viewAllDiningTables.xhtml">View all dining table</h:link></li>
 
             </ul>
             <h:form id="logoutForm">
