Updated menu management into a single page with cc

--- a/eQueue/eQueue-war/web/viewMenuItemDetails.xhtml
+++ b/eQueue/eQueue-war/web/viewMenuItemDetails.xhtml
@@ -26,10 +26,10 @@
 
             <h:panelGrid columnClasses="dataTableLabel,dataTableValue" columns="2" style="width: 100%;" rendered="#{viewMenuItemDetailsManagedBean.menuItemToView != null}">
 
-                <h:outputText style="font-weight: bold; width: 20%;" value="Product ID"/>
+                <h:outputText style="font-weight: bold; width: 20%;" value="Menu Item ID"/>
                 <h:outputText style="width: 80%;" value="#{viewMenuItemDetailsManagedBean.menuItemToView.menuItemId}"/>
 
-                <h:outputText style="font-weight: bold;" value="SKU Code"/>
+                <h:outputText style="font-weight: bold;" value="Menu Item Code"/>
                 <h:outputText value="#{viewMenuItemDetailsManagedBean.menuItemToView.menuItemCode}"/>
 
                 <h:outputText style="font-weight: bold;" value="Name"/>
