Finished designing the first draft of login page and basic security filter (not in use yet). Note that a basic homepage has been created and the necessary web pages should be directed to homepage.xhtml instead of index.xhtml.

--- a/eQueue/eQueue-war/web/createNewEmployee.xhtml
+++ b/eQueue/eQueue-war/web/createNewEmployee.xhtml
@@ -51,7 +51,7 @@
 
             <br/>
             <div style="text-align: left;">
-                <h:button outcome="index.xhtml" value="Back" />&nbsp;
+                <h:button outcome="homepage.xhtml" value="Back" />&nbsp;
                 <h:commandButton value="Clear" type="reset" />&nbsp;
                 <h:commandButton value="Create" type="submit" actionListener="#{createNewEmployeeManagedBean.createNewEmployee}" />
             </div>
