--- a/eQueue/eQueue-war/web/viewAllEmployees.xhtml
+++ b/eQueue/eQueue-war/web/viewAllEmployees.xhtml
@@ -46,7 +46,7 @@
         <br />
         
         <div style="text-align: left;">
-            <h:button outcome="index.xhtml" value="Back" />&nbsp;
+            <h:button outcome="homepage.xhtml" value="Back" />&nbsp;
         </div>
 
     </h:body>
