fixed formatting issues for dining table management in accordance to eQueue

--- a/eQueue/eQueue-war/web/menuManagement.xhtml
+++ b/eQueue/eQueue-war/web/menuManagement.xhtml
@@ -29,7 +29,7 @@
                 </h:form>
             </p:layoutUnit>
 
-            <ez:viewMenuCategory id="ccViewMenuCategozy" />
+            <ez:viewMenuCategory id="ccViewMenuCategory" />
             <ez:viewMenuItem id="ccViewMenuItem" />
 
             <p:layoutUnit position="center" >
